# ME700_Assignment1

./: README.md  Tutorial1.py  Tutorial2.py  Tutorial3.py  Tutorial_Mech1.py  Tutorial_Mech2.py  assignment_1_genAIuse.txt  bisection.py  practice.py  pyproject.toml
.github/workflows/: tests.yml
src/: bisection.py
warmup/src/: bisection.py
warmup/test/: test.py
warmup/tutorials/: Tutorial1.py  Tutorial2.py  Tutorial3.py  Tutorial_Mech1.py  Tutorial_Mech2.py
